--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                 <div class="col-md-4">
                     <h5>Contact Us</h5>
                     <ul class="list-unstyled">
-                        <li>Email: sales@vapemaster.com</li>
-                        <li>WhatsApp: +86 13800138000</li>
+                        <li>Email: lumoswhite82@gmail.com</li>
+                        <li>WhatsApp: +86 13728412219</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
